--- a/CourseraConsole/CourseraConsole.csproj
+++ b/CourseraConsole/CourseraConsole.csproj
@@ -48,6 +48,7 @@
     <Compile Include="PatternConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SkewFinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
