--- a/CourseraConsole/CourseraConsole.csproj
+++ b/CourseraConsole/CourseraConsole.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ClumpFinder.cs" />
     <Compile Include="FrequencyCalculator.cs" />
     <Compile Include="HammingDistanceCalculator.cs" />
+    <Compile Include="NeighborhoodGenerator.cs" />
     <Compile Include="PatternConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
