--- a/CourseraConsole/CourseraConsole.csproj
+++ b/CourseraConsole/CourseraConsole.csproj
@@ -49,6 +49,7 @@
     <Compile Include="HammingDistanceCalculator.cs" />
     <Compile Include="NeighborhoodGenerator.cs" />
     <Compile Include="PatternConverter.cs" />
+    <Compile Include="PatternIdentifier.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SkewFinder.cs" />
